# deepFORMA

./: .gitignore  CITATION.cff  LICENSE  README.md  USAGE.txt  pyproject.toml  requirements-train.txt  requirements.txt
deepforma/: __init__.py
deepforma/features/: __init__.py  nine_metrics.py
deepforma/io/: __init__.py  array_utils.py  h5_io.py  nrrd_io.py  spacing.py
deepforma/model/: __init__.py  checkpoint.py  transunet3d.py
deepforma/segmentation/: __init__.py  canonical.py
docs/: metrics.md
scripts/: build_database.py  build_database_final_fig56.py  convert_nrrd_to_h5.py  convert_nrrd_to_h5_raw.py  train_transformer_kfold.py
