[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepforma"
version = "0.1.0"
description = "Minimal, reproducible code for FORMA organoid MRI segmentation and database construction."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.26,<1.27",
  "pandas>=2.2,<2.3",
  "h5py>=3.10,<3.11",
  "pynrrd>=1.0,<1.1",
  "scipy>=1.11,<1.12",
  "scikit-image>=0.22,<0.23",
  "openpyxl>=3.1,<3.2",
  "tqdm>=4.66,<4.67",
]

[tool.setuptools]
packages = ["deepforma", "deepforma.features", "deepforma.io", "deepforma.model", "deepforma.segmentation"]

